<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wish">Wish</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="idrip">iDrip\n</string>
    <string name="hot_deals">Hot Deals\n</string>
    <string name="see_all">SEE ALL</string>
    <string name="most_poplular">Most Poplular</string>
    <string name="your_web_client_id">406097172565-f8t9ev9m7br4f6lojvf8imb202iquql0.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="idrip_default_notification_channel_id">idrip_notification_id</string>
    <string name="idrip_notification_channel_id">idrip_notifacation_id</string>
    <string name="location">Location</string>
    <string name="channel_name">idrip_noti\n</string>
    <string name="channel_description">"this is a idrip app notification "</string>
</resources>