<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/wishFragment"
        android:icon="@drawable/wish"
        android:title="@string/wish"
        app:showAsAction="always" />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/category"
        android:title="@string/category"
        app:showAsAction="always" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>